# Sipros3

./: .gitignore
Sipros-src/: CMakeLists.txt  MPIMakefile  Makefile  SiprosConfig.N15_SIP.cfg  SiprosConfigIsobaricTags.cfg  SiprosConfigLow.cfg  SiprosConfigPTM.cfg
Sipros-src/.svn/: all-wcprops  entries
Sipros-src/.svn/text-base/: SiprosConfig.cfg.svn-base  SiprosConfigRegular.cfg.svn-base  sipros_openmp.kdev4.svn-base
scripts/: mzML2FT.py
scripts/.svn/: all-wcprops  entries
scripts/inhouse/.svn/: all-wcprops  entries
